# controlers/userController.js
@@ -1,6 +1,6 @@
 const bcrypt = require("bcrypt");
 const jwt = require("jsonwebtoken");
-
+const multer = require('multer');
 const { send } = require("../services/emailService")
 const sendVerification = require("../helpers/sendVerification")
 const generateJWT = require("../helpers/generateJWT")
@@ -10,23 +10,32 @@ const fs = require("fs");
 const path = require("path");
 
 
+const storage = multer.diskStorage({
+  destination: (req, file, cb) => {
+    cb(null, 'userImages');
+  },
+  filename: (req, file, cb) => {
+    cb(null, `${Date.now()}-${file.originalname}`);
+  },
+});
+
+const upload = multer({ storage });
+
 class UserController {
   async registration(req, res, next) {
-    const { email, password, full_name, country, isSendMessage } = req.body;
+    const { email, password, full_name, country, isSendMessage, role = 'user' } = req.body;
     if (!email || !password || !full_name) return next(ApiError.badRequest("Email, password and name are required"));
     try {
-      console.log("sladfkj")
       const existingUser = await User.findOne({ where: { email } });
       if (existingUser) {
-        next(ApiError.userAlreadyAxist("User with this email already exists"));
+        next(ApiError.userAlreadyExist("User with this email already exists"));
       }
       const hashedPassword = await bcrypt.hash(password, 5);
       const newUser = await User.create({
-        email, full_name, country, isSendMessage, password: hashedPassword
+        email, full_name, country, isSendMessage, password: hashedPassword, role
       });
       const { access, refresh } = generateJWT.tokens(newUser.id, newUser.email);
       await generateJWT.saveRefreshToken(newUser.id, refresh);
-      // sendVerification(email, access);
       res.json({
         status: 200,
         access, refresh,
@@ -34,7 +43,6 @@ class UserController {
       });
     } catch (error) {
       return next(ApiError.internal("Internal Server Error", error));
-
     }
   }
 
@@ -73,10 +81,11 @@ class UserController {
 
 
   async login(req, res, next) {
-    const { email, password } = req.body;
     try {
-      if (!email) return next(ApiError.badRequest("Enter email"));
-      if (!password) return next(ApiError.badRequest("Enter password"));
+      const { email, password } = req.body;
+
+      // if (!email) return next(ApiError.badRequest("Enter email"));
+      // if (!password) return next(ApiError.badRequest("Enter password"));
 
       const user = await User.findOne({ where: { email } });
       if (!user) return next(ApiError.badRequest("User is not found"));
@@ -182,7 +191,72 @@ class UserController {
     }
   }
 
+  async updateProfile(req, res, next) {
+      const { id } = req.user;
+      const {
+        full_name,
+        phone,
+        country,
+        city,
+        state,
+        zip_code,
+        alternate_email,
+        alternate_phone,
+        secret_question,
+        secret_answer,
+      } = req.body;
 
+      try {
+        const updatedUser = await User.update(
+          {
+            full_name,
+            phone,
+            country,
+            city,
+            state,
+            zip_code,
+            alternate_email,
+            alternate_phone,
+            secret_question,
+            secret_answer,
+          },
+          { where: { id: id }, returning: true, plain: true }
+        );
+
+        res.json({ message: 'Profile updated successfully', user: updatedUser[1] });
+      } catch (error) {
+        res.json({  message: "Profile updated failed", user: {} })
+        next(error);
+      }
+    };
+
+  async updateAvatar(req, res, next) {
+
+    try {
+      const { id } = req.user; // Assuming userId is available in req.user
+      let avatarUrl = null;
+
+      if (req.files && req.files.avatar) {
+        const avatar = req.files.avatar;
+        const avatarPath = path.join(__dirname, '../userImages', `${id}_${Date.now()}_${avatar.name}`);
+        avatar.mv(avatarPath, (err) => {
+          if (err) {
+            return next(ApiError.internal('Failed to upload avatar', err));
+          }
+        });
+
+        avatarUrl = `${process.env.PUBLIC_URL}:${process.env.PORT}/userImages/${path.basename(avatarPath)}`;
+        const updatedUser = await User.update({avatar: avatarUrl },
+          { where: { id }, returning: true, plain: true }
+          )
+        return res.json({avatarUrl, user: updatedUser[1]})
+      }
+
+    } catch (e) {
+      console.log(e)
+    }
+
+  }
 }
 
 module.exports = new UserController();
